sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:12: error: not found: value abs
    if (abs((getCouleurJoueur(n,0))-trou) > abs((getCouleurJoueur(n,0))-trou)) {
        ^NaiveBaseball:12: error: not found: value abs
    if (abs((getCouleurJoueur(n,0))-trou) > abs((getCouleurJoueur(n,0))-trou)) {
                                            ^