sort.baseball.NaiveBaseball.scala.code
override def run() {
  var n = getNombreBases()
  var trou = getTrouBase()
  var posJoueur = 1
  while (!estTrie()) {
    trou = getTrouBase()
    if (trou == n-1) {
      n = 0
    } else {
      n += 1
    }
    if (abs((getCouleurJoueur(n,0))-trou) > abs((getCouleurJoueur(n,0))-trou)) {
      deplace(n,0)
    } else {
      deplace(n,1)
    }
  }
}